Update and rename lab2-home to lab2-home.html

--- a/lab2-home.html
+++ b/lab2-home.html
@@ -10,7 +10,7 @@
   <p>In this weeks lab we will be reusing our repositories from week 1 and adding 2 HTML files to our Web Programming folder. We also will be adding a table with hyperlinks that will take the user to another page. Finally we will be adding external pages using relative and absolute paths.</p>
   <table>
   <td>
-    <a href="https://github.com/avasarab/WebProgramming/main/lab2-about">Lab 2 About</a>
+    <a href="https://github.com/avasarab/WebProgramming/lab2-about.html">About</a>
   </td>
   <td>
     <a href="https://www.mozilla.org/en-US/">Mozilla Home Page</a>
