--- a/lab2-about.html
+++ b/lab2-about.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width">
   <title>Lab 2 - About</title>
 </head>
 <body> 
@@ -10,7 +9,7 @@
   <p>The purpose of this lab is to get practice using tables and using links in tables.</p>
   <table>
   <td>
-    <a href="https://github.com/avasarab/WebProgramming/main/lab2-home">Lab 2 Home</a>
+    <a href="https://github.com/avasarab/WebProgramming/lab2-home.html">Lab 2 Home</a>
   </td>
   <td>
   <a href="mailto:14avasarab@gmail.com">Send me an email!</a>
