--- a/lab2-about.html
+++ b/lab2-about.html
@@ -12,7 +12,7 @@
     <a href="mailto:14avasarab@gmail.com">Send me an email!</a>
   </td>
   <td>
-    <a href="https://github.com/avasarab/WebProgramming/lab2-home.html">Home</a>
+    <a href="lab2-home.html">Home</a>
   </td>
   </table>
 </body>
