--- a/lab2-home.html
+++ b/lab2-home.html
@@ -9,7 +9,7 @@
   <p>In this weeks lab we will be reusing our repositories from week 1 and adding 2 HTML files to our Web Programming folder. We also will be adding a table with hyperlinks that will take the user to another page. Finally we will be adding external pages using relative and absolute paths.</p>
   <table>
   <td>
-    <a href=lab2-about.html">About</a>
+    <a href="lab2-about.html">About</a>
   </td>
   <td>
     <a href="https://www.mozilla.org/en-US/">Mozilla Home Page</a>
