--- a/lab5-text.html
+++ b/lab5-text.html
@@ -5,7 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Styling Text and Fonts</title>
   <style>
-    
+
+    html{
+      font-family: arial;
+    }
+
+    footer p{
+      text-align: center;
+    }
+
     h1{
       font-size: 3rem;
       font-weight: bold;
@@ -13,30 +21,33 @@
       text-shadow: 1px 1px 1px red;
     }
 
+    p{
+      text-align: justify;
+      line-height: 1.6;
+    }
+
     h2{
       font-size: 2rem;
       font-weight: lighter;
       text-transform: uppercase;
-      text-shadow: 1px 1px 1px grey;
+    }
+
+    .transform{
+      text-transform: capitalize;
+    }
+
+    .shadow{
+      text-shadow: 4px 2px 2px grey;
     }
 
     ol {
       list-style-type: upper-roman;
+      margin: 1rem;
     }
   
     ul {
       list-style-type: square;
-    }
-    ul + ol{ 
       margin: 1rem;
-    }
-    footer {
-      text-align: center;
-    }
-    p{
-      font-family: Verdana;
-      text-align: justify;
-      line-height: 1.6;
     }
 
   </style>
@@ -48,19 +59,19 @@
   <main>
     <section>
       <h2>Font Properties</h2>
-      <p>This paragraph demonstrates the use of font-family, font-size, and font-weight properties.</p>
+      <p class="font">This paragraph demonstrates the use of font-family, font-size, and font-weight properties.</p>
     </section>
     <section>
       <h2>Text Alignment</h2>
-      <p>This paragraph demonstrates how to align text using the text-align property.</p>
+      <p class="alignment">This paragraph demonstrates how to align text using the text-align property.</p>
     </section>
     <section>
       <h2>Transforming Text</h2>
-      <p>This paragraph demonstrates text transformation with uppercase, lowercase, and capitalization.</p>
+      <p class="transform">This paragraph demonstrates text transformation with uppercase, lowercase, and capitalization.</p>
     </section>
     <section>
       <h2>Text Shadow</h2>
-      <p>This paragraph demonstrates how to add shadow effects to text.</p>
+      <p class="shadow">This paragraph demonstrates how to add shadow effects to text.</p>
     </section>
     <section>
       <h2>Lists</h2>
