--- a/lab6-boxmodel.html
+++ b/lab6-boxmodel.html
@@ -6,12 +6,25 @@
 <title>CSS Box Model Lab</title>
 <style>
 /* Add your CSS here */
+.box {
+    margin: 20px;
+    border: 5px solid blue;
+    padding: 20px;
+    background-color: lightgray;
+    width: 190px;
+    height: 190px;
+    box-sizing: border-box;
+    /* the border box is different from a content box, border box wraps the content, where the content box is sized to fit the content */
+}
 </style>
 </head>
 <body>
 <h1>CSS Box Model Lab</h1>
 <div class="box">
 <p>This is a demonstration of the CSS Box Model.</p>
+</div>
+<div class="box">
+    <p>This is the second box, using the same class as the first one.</p>
 </div>
 </body>
 </html>
